Java 12 + optional clean of the previously added prefix